20250102 納受領書出力 权限检查

--- a/sd-s4apps01/deliveryreceipt/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/deliveryreceipt/webapp/i18n/i18n.properties
@@ -16,3 +16,7 @@ delete=納品書No.クリア
 #XMSG
 msgInconsistencies=得意先または出荷ポイントが一緒ではなく、まとめて印刷することはできません。
 msgDeleteSuccessed=納品書No.クリア成功
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
