20250102 請求書出力 权限检查

--- a/sd-s4apps01/invoiceprint/webapp/i18n/i18n_ja.properties
+++ b/sd-s4apps01/invoiceprint/webapp/i18n/i18n_ja.properties
@@ -22,6 +22,11 @@ printDate=日付
 msgInconsistencies=得意先または出荷ポイントが一緒ではなく、まとめて印刷することはできません。
 msgDeleteSuccessed=請求書No.クリア成功
 
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
+
+
 #XFLD,120: Label for a column title
 price=単価
 
