--- a/sd-s4apps01/invoiceprint/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/invoiceprint/webapp/i18n/i18n.properties
@@ -22,11 +22,16 @@ printDate=日付
 msgInconsistencies=得意先または出荷ポイントが一緒ではなく、まとめて印刷することはできません。
 msgDeleteSuccessed=請求書No.クリア成功
 
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+noAuthorityPlant=プラント {0} の権限がありません。
+
+
 #XFLD,120: Label for a column title
 price=単価
 
 #XFLD,120: Label for a column title
-amountexcludtax=金額(税抜き)
+NetAmount=金額(税抜き)
 
 #XFLD,120: Label for a column title
 quantity=数量
