20250102 TWX21検収データ取込み機能 权限检查

--- a/sd-s4apps01/salesacceptdn/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesacceptdn/webapp/i18n/i18n.properties
@@ -22,6 +22,9 @@ uploadText=ファイルアップロード
 result=結果
 logInfo=ヘッダ {0} 件の中に、{1} 件の取込に成功、{2} 件の取込に失敗しました
 
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+
 Status=ステータス
 Result=結果
 Message=メッセージ
