20250102 出荷保管場所決定マスタ 权限检查

--- a/sd-s4apps01/shipmentstorageloc/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/shipmentstorageloc/webapp/i18n/i18n.properties
@@ -7,3 +7,6 @@ appTitle=出荷保管場所決定マスタ
 
 #YDES: Application description
 appDescription=出荷保管場所決定マスタ
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
