20250103 FICO-007 有償支給純額計算処理

--- a/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/paidpaycalculation/webapp/i18n/i18n_ja.properties
@@ -86,9 +86,9 @@ ChargeableRate=仕入率（%）
 PreviousStockAmount=在庫金額（前期末）
 CurrentStockAmount=在庫金額（当期末）-有償支給品
 CustomerRevenue1=該当得意先の総売上高期初
-CustomerRevenue=該当得意先の総売上高
+CustomerRevenue=該当得意先の総売上高（今年初-当期末）
 Revenue1=会社レベルの総売上高期初
-Revenue=会社レベルの総売上高
+Revenue=会社レベルの総売上高（今年初-当期末）
 PurGrpTot=購買グループ仕入金額（合計）
 ChargeableTot=有償支給品仕入金額（合計）
 CurrentStockSemi=在庫金額（当期末）-半製品
@@ -96,7 +96,7 @@ CurrentStockFin=在庫金額（当期末）-製品
 CurrentStockTotal=在庫金額（当期末）-合計
 StockChangeAmount=在庫増減金額
 PaidMaterialCost=払いだし材料費
-RevenueRate=総売上金額占有率
+RevenueRate=総売上金額占有率（%）
 Currency=Currency
 Unit=Unit
 
