MM-018 購買情報マスタレポート CM对应

--- a/mm-s4apps01/purinfomasterlist/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/purinfomasterlist/webapp/i18n/i18n.properties
@@ -3,13 +3,13 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=購買情報マスタ一覧
-Result=購買情報マスタ一覧
+appTitle=購買情報マスタレポート
+Result=購買情報マスタレポート
 
 #YDES: Application description
-appDescription=購買情報マスタ一覧
+appDescription=購買情報マスタレポート
 #XTIT: Main view title
-title=購買情報マスタ一覧
+title=購買情報マスタレポート
 
 #Check Box
 ZTYPE1=削除済を含み
@@ -79,7 +79,7 @@ UMCJPPurchasingPrice = UMCJP's Purchasing Price
 
 
 #XFLD,60
-flpTitle=購買情報マスタ一覧
+flpTitle=購買情報マスタレポート
 
 getAuthorityFailed=権限情報の取得に失敗しました。
 noAuthorityView=ユーザ {0} は該当APPの権限がありません。
