MM-004 購買単価差異レポート CM对应

--- a/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_en.properties
+++ b/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_en.properties
@@ -51,6 +51,7 @@ PurchaseOrderStr=PO Item
 PriceDate=Price Date
 ExcludeDeliveredPO=Exclude Delivered PO
 PurchaseOrderDate=Purchase Order Date
+ConditionRateValue=Condition Rate Value
 
 getAuthorityFailed=Failed to obtain authority information.
 noAuthorityView=User {0} does not have authority for this app.
