BC-001 BTP汎用管理 权限检查

--- a/bc-s4apps01/zcommonconf/webapp/i18n/i18n.properties
+++ b/bc-s4apps01/zcommonconf/webapp/i18n/i18n.properties
@@ -10,3 +10,6 @@ appDescription=BTP汎用管理
 
 #XFLD,60
 flpTitle=BTP汎用管理
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
