--- a/bc-s4apps01/zcommonconf/webapp/i18n/i18n_en.properties
+++ b/bc-s4apps01/zcommonconf/webapp/i18n/i18n_en.properties
@@ -10,3 +10,6 @@ appDescription=Common Configuration
 
 #XFLD,60
 flpTitle=Common Configuration
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
