BC-003 一括アップロード機能実行 权限检查

--- a/bc-s4apps01/zdtimpfiles/webapp/i18n/i18n_en.properties
+++ b/bc-s4apps01/zdtimpfiles/webapp/i18n/i18n_en.properties
@@ -10,3 +10,6 @@ appDescription=Batch Import Files
 
 #XFLD,69
 flpTitle=Batch Import Files
+
+getAuthorityFailed=Failed to obtain authority information.
+noAuthorityView=User {0} does not have authority for this app.
