--- a/bc-s4apps01/zdtimpfiles/webapp/i18n/i18n_ja.properties
+++ b/bc-s4apps01/zdtimpfiles/webapp/i18n/i18n_ja.properties
@@ -10,3 +10,6 @@ appDescription=一括アップロード機能実行
 
 #XFLD,69
 flpTitle=一括アップロード機能実行
+
+getAuthorityFailed=権限情報の取得に失敗しました。
+noAuthorityView=ユーザ {0} は該当APPの権限がありません。
