20250107 MM-031 受入実績レポート

--- a/mm-s4apps01/poacceptance/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/poacceptance/webapp/i18n/i18n.properties
@@ -11,6 +11,7 @@ appDescription=An SAP Fiori application.
 PurchaseOrder=Purchase Order
 PurchaseOrderItem=PO Item
 PurchaseOrderItemUniqueID=PO Item
+OldID=Old PO Item
 MaterialDocument=MaterialDocument
 MaterialDocumentItem=Matdoc Item
 SupplierInvoice=Supplier Invoice
@@ -28,6 +29,8 @@ Material=Material
 SupplierMaterialNumber=SupplierMat. Num.
 CustomerMaterial=Customer Material
 ProductManufacturerNumber=ProductManufacturerNumber
+ManufacturerNumber=Manufacturer Number
+ManufacturerNumberName=ManufacturerNumber Name
 PurchaseOrderItemText=Short Text
 NetPrice1=Net Price 1
 DocumentCurrency=Document Currency
@@ -37,6 +40,8 @@ OrderQuantity=Order Quantity
 PurchaseOrderQuantityUnit=PO Quantity Unit
 NetAmount=NetAmount
 NetPriceQuantity=NetPrice Quantity
+IncotermsClassification=Incoterms Classification
+SupplierMaterialGroup=Supplier Material Group
 AccountAssignmentCategory=Account Assign. Cat.
 CostCenter=Cost Center
 GLAccount=GL Account
