--- a/mm-s4apps01/poacceptance/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/poacceptance/webapp/i18n/i18n_ja.properties
@@ -11,6 +11,7 @@ appDescription=受入実績レポート
 PurchaseOrder=購買発注番号
 PurchaseOrderItem=購買発注番号明細
 PurchaseOrderItemUniqueID=購買発注番号明細
+OldID=旧購買発注番号明細
 MaterialDocument=入出庫伝票
 MaterialDocumentItem=入出庫伝票明細
 SupplierInvoice=請求書伝票番号
@@ -28,6 +29,8 @@ Material=品目コード
 SupplierMaterialNumber=仕入先品目コード
 CustomerMaterial=顧客品番
 ProductManufacturerNumber=メーカー品番
+ManufacturerNumber=メーカーCD
+ManufacturerNumberName=メーカー名
 PurchaseOrderItemText=品目テキスト
 NetPrice1=発注単価
 DocumentCurrency=取引通貨
@@ -37,6 +40,8 @@ OrderQuantity=発注数量
 PurchaseOrderQuantityUnit=発注単位
 NetAmount=正味発注価格
 NetPriceQuantity=価格単位
+IncotermsClassification=基軸通貨
+SupplierMaterialGroup=価格コントロール区分
 AccountAssignmentCategory=勘定設定 Categ.
 CostCenter=原価センタ
 GLAccount=G/L 勘定
