20240117 SD-032 販売計画一覧 新增salesvsersion filter

--- a/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
@@ -76,3 +76,12 @@ selectOperation=機能操作を選択してください。
 confirmMessage={0}しますか？
 getAuthorityFailed=権限情報の取得に失敗しました。
 noAuthorityView=ユーザ {0} は該当APPの権限がありません。
+
+allVersionsEmpty=値計画の売上&貢献利益&売上総利益が関連しますので、全部入力してください！
+zeroEmptyWithAtLeastOneEmpty=値計画の売上&貢献利益&売上総利益が関連しますので、全部入力してください！
+oneTwoThreeStartWithWrong=入力された検索条件が正しくなく、ルールに従って入力してください。
+
+SalesPlanVersion0Bar=数量計画
+SalesPlanVersion1Bar=金額計画（売上）
+SalesPlanVersion2Bar=金額計画（貢献利益）
+SalesPlanVersion3Bar=金額計画（売上総利益）
