BI-003 回収残データ一括アップロード 新增开发

--- a/bi-s4apps01/recoveryupload/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/recoveryupload/webapp/i18n/i18n.properties
@@ -25,6 +25,7 @@ UploadType_SS=在庫廃棄ロス
 templateText=テンプレートダウンロード
 uploadText=ファイルアップロード
 result=結果
+clearBtn=取込データクリア
 saveBtn=保存
 exportBtn=エクセル出力
 logInfo=ヘッダ {0} 件の中に、{1} 件の取込に成功、{2} 件の取込に失敗しました
@@ -85,10 +86,9 @@ SSMaterialText=在庫廃棄ロス品目テキスト
 # GLAccount=勘定科目
 # GLAccountText=勘定科目テキスト
 Quantity=品目入出庫伝票数量
-Amount=品目伝票明細金額
+# RecoveryNecessaryAmount=回収必要金額
 
 #Message
 ProcessingCompleted=処理が完了しました。
 getAuthorityFailed=権限情報の取得に失敗しました。
 noAuthorityView=ユーザ {0} は該当APPの権限がありません。
-noAuthorityPlant=プラント {0} の権限がありません。
