--- a/bi-s4apps01/recoveryupload/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/recoveryupload/webapp/i18n/i18n.properties
@@ -25,10 +25,15 @@ UploadType_SS=在庫廃棄ロス
 templateText=テンプレートダウンロード
 uploadText=ファイルアップロード
 result=結果
+Delete=削除
 clearBtn=取込データクリア
 saveBtn=保存
 exportBtn=エクセル出力
 logInfo=ヘッダ {0} 件の中に、{1} 件の取込に成功、{2} 件の取込に失敗しました
+
+UploadType=タイプ
+CompanyCode=会社コード
+Results=結果
 
 #Table Column
 Status=ステータス
