BI-003 回収既存データ照会 追加删除逻辑

--- a/bi-s4apps01/recoveryupload/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/recoveryupload/webapp/i18n/i18n.properties
@@ -94,6 +94,7 @@ Quantity=品目入出庫伝票数量
 # RecoveryNecessaryAmount=回収必要金額
 
 #Message
+ConfirmMessage={0}しますか？
 ProcessingCompleted=処理が完了しました。
 getAuthorityFailed=権限情報の取得に失敗しました。
 noAuthorityView=ユーザ {0} は該当APPの権限がありません。
