FICO-019&026 長期滞在＆低価法レポート 20250208

--- a/fico-s4apps01/zinventoryaging/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zinventoryaging/webapp/i18n/i18n.properties
@@ -108,6 +108,8 @@ QuantityMonth35=35ヶ月-数量
 AmountMonth35=35ヶ月-金額
 QuantityMonth36=36ヶ月-数量
 AmountMonth36=36ヶ月-金額
+QuantityUnspecified=未確定-数量
+AmountUnspecified=未確定-金額
 Ledger=元帳
 KeyDate=重要な日付
 ReCalculateIndicator=再計算	
