20250209 SD011 売上検収突合プラットフォーム

--- a/sd-s4apps01/salesacceptresult/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesacceptresult/webapp/i18n/i18n.properties
@@ -16,6 +16,7 @@ flpTitle=Sales Accept Result
 #Texts for Main.view.xml
 Customer=Customer
 PeriodType=PeriodType
+AcceptYear=AcceptYear
 AcceptPeriod=AcceptPeriod
 AcceptPeriodFrom=AcceptPeriodFrom
 AcceptPeriodTo=AcceptPeriodTo
