--- a/sd-s4apps01/salesacceptresult/webapp/i18n/i18n_ja.properties
+++ b/sd-s4apps01/salesacceptresult/webapp/i18n/i18n_ja.properties
@@ -16,6 +16,7 @@ flpTitle=売上実績突合
 #Texts for Main.view.xml
 Customer=得意先
 PeriodType=期間区分
+AcceptYear=検収年度
 AcceptPeriod=検収期間
 AcceptPeriodFrom=検収期間From
 AcceptPeriodTo=検収期間To
