MM-011 購買申請登録とファイル添付 附件上传重做

--- a/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
@@ -103,3 +103,7 @@ Status2Text=承認中
 Status3Text=承認済
 Status4Text=送信済
 
+documentTableTitle=ファイル
+FileName=ファイル名
+FileSize=ファイルサイズ
+UploadFailed=添付ファイルのアップロードに失敗しました。
