--- a/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
@@ -107,3 +107,5 @@ documentTableTitle=ファイル
 FileName=ファイル名
 FileSize=ファイルサイズ
 UploadFailed=添付ファイルのアップロードに失敗しました。
+DownloadFileFailed=ファイルのダウンロードに失敗しました。
+DeleteFileFailed=ファイルの削除に失敗しました。
