MM-021 購買申請承認 附件改修

--- a/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
@@ -130,3 +130,9 @@ getAuthorityFailed=権限情報の取得に失敗しました。
 noAuthorityView=ユーザ {0} は該当APPの権限がありません。
 noAuthorityPlant=プラント {0} の権限がありません。
  
+documentTableTitle=ファイル
+FileName=ファイル名
+FileSize=ファイルサイズ
+UploadFailed=添付ファイルのアップロードに失敗しました。
+DownloadFileFailed=ファイルのダウンロードに失敗しました。
+DeleteFileFailed=ファイルの削除に失敗しました。
