MM-011/021 購買申請 附件上传功能优化

--- a/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
@@ -106,6 +106,7 @@ Status4Text=送信済
 documentTableTitle=ファイル
 FileName=ファイル名
 FileSize=ファイルサイズ
+LastModified=最終更新
 UploadFailed=添付ファイルのアップロードに失敗しました。
 DownloadFileFailed=ファイルのダウンロードに失敗しました。
 DeleteFileFailed=ファイルの削除に失敗しました。
