--- a/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
@@ -133,6 +133,7 @@ noAuthorityPlant=プラント {0} の権限がありません。
 documentTableTitle=ファイル
 FileName=ファイル名
 FileSize=ファイルサイズ
+LastModified=最終更新
 UploadFailed=添付ファイルのアップロードに失敗しました。
 DownloadFileFailed=ファイルのダウンロードに失敗しました。
 DeleteFileFailed=ファイルの削除に失敗しました。
