--- a/fico-s4apps01/zbindglupload/webapp/i18n/i18n_en.properties
+++ b/fico-s4apps01/zbindglupload/webapp/i18n/i18n_en.properties
@@ -23,8 +23,9 @@ closeBtn=close
 logInfo=Out of a total of {0} items in the table, {1} items were successful and {2} items failed
 
 #Table Column
+Status=Status
+Message=Message
 ChartOfAccounts=Chart Of Accounts
-
 GLAccount=G/L Account
 GLAccountName=G/L Account Name
 GLAccountLongName=G/L Account Name
