--- a/fico-s4apps01/zbindglupload/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/zbindglupload/webapp/i18n/i18n_ja.properties
@@ -23,8 +23,9 @@ closeBtn=いいえ
 logInfo=ヘッダ {0} 件の中に、{1} 件の取込に成功、{2} 件の取込に失敗しました
 
 #Table Column
+Status=ステータス
+Message=メッセージ
 ChartOfAccounts=勘定コード表
-
 GLAccount=G/L勘定
 GLAccountName=G/L勘定テキスト
 GLAccountLongName=G/L勘定テキスト
