SD-011 売上&検収突合プラットフォーム Destination切换至DA

--- a/sd-s4apps01/salesacceptresult/webapp/i18n/i18n_ja.properties
+++ b/sd-s4apps01/salesacceptresult/webapp/i18n/i18n_ja.properties
@@ -20,8 +20,8 @@ AcceptYear=検収年度
 AcceptPeriod=検収期間
 AcceptPeriodFrom=検収期間From
 AcceptPeriodTo=検収期間To
-tableHeaderTitle=Result
-groupHeaderTitle=Result({0})
+tableHeaderTitle=結果
+groupHeaderTitle=結果({0})
 
 #Button
 saveButtonText=保存
