MR申请 修改部署描述 CM#4240

--- a/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n.properties
@@ -35,8 +35,8 @@ Results=結果
 Plant=プラント
 Type=申請タイプ
 MaterialRequisitionNo=申請NO
-CostCenter=部署
-CostCenterName=部署名
+CostCenter=原価センタ
+CostCenterName=原価センタ名
 RequisitionDate=所要日付
 HeaderCreatedDate=申請日付
 Receiver=宛先
