PP-032 在庫所要一覧レポート 优化 CM#4333

--- a/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n.properties
@@ -29,6 +29,7 @@ DisplayDimension=結果表示
 ShowInformation=購買関連情報表示
 ShowDetailLines=購買関連明細行表示
 ShowDEMAND=DEMAND明細表示
+FromMRPTable=同期済のMRPデータ使用
 
 Yes=はい
 No=いいえ
@@ -43,6 +44,10 @@ Summary=Summary
 PurchaseList=Purchase List
 CloseBtn=中止
 Download=ダウンロード
+MRPSynchronous=MRPデータ同期
+MRPSynchronousMsg1=最新同期日時: {0}
+MRPSynchronousMsg2=今同期中、実行者 {0}、実行開始時間: {1}
+MRPSynchronousMsg3=ジョブ {0} が開始されました。
 
 MRPControllerName=MRP管理者名称
 ABCIndicator=ABC区分
