--- a/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_en.properties
@@ -29,6 +29,7 @@ DisplayDimension=Display Dimension
 ShowInformation=Show Information
 ShowDetailLines=Show Detail Lines
 ShowDEMAND=Show DEMAND
+FromMRPTable=From MRP Table
 
 Yes=Yes
 No=No
@@ -43,6 +44,10 @@ Summary=Summary
 PurchaseList=Purchase List
 CloseBtn=Close
 Download=Download
+MRPSynchronous=MRP Synchronous
+MRPSynchronousMsg1=MRP Synchronous Time: {0}
+MRPSynchronousMsg2=Synchronizing、Executor {0}、Start Time: {1}
+MRPSynchronousMsg3=Background job has been started: {0}
 
 MRPControllerName=MRP Controller Name
 ABCIndicator=ABC Indicator
