--- a/sd-s4apps01/zdndatebatchupdate/webapp/i18n/i18n_ja.properties
+++ b/sd-s4apps01/zdndatebatchupdate/webapp/i18n/i18n_ja.properties
@@ -14,7 +14,7 @@ title=出荷伝票外部移転の日付一括更新
 flpTitle=出荷伝票外部移転の日付一括更新
 
 Result1=出荷伝票一括更新
-Result2=出荷伝票一覧(転記済み且つ未請求)
+Result2=出荷伝票一覧(転記済且つ未来日付の内/外部実績)
 
 templateText=テンプレートダウンロード
 uploadText=ファイルアップロード
