BI-006 長期滞留在庫実績 列描述改修

--- a/bi-s4apps01/longterminventory/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/longterminventory/webapp/i18n/i18n.properties
@@ -21,7 +21,8 @@ materialType=品目タイプ
 product=製品
 businessPartner=得意先
 profitCenter=利益センタ
-actualPrice=実際原価
+# actualPrice=実際原価
+actualPrice=評価単価
 longTermInventory=長期滞留在庫
 longTermInventoryAmount=長期滞留在庫金額
 currency=通貨
