--- a/bi-s4apps01/longterminventory/webapp/i18n/i18n_en.properties
+++ b/bi-s4apps01/longterminventory/webapp/i18n/i18n_en.properties
@@ -23,7 +23,8 @@ materialType=Material Type
 product=Product
 businessPartner=Business Partner
 profitCenter=Profit Center
-actualPrice=Actual Price
+# actualPrice=Actual Price
+actualPrice=Evaluation Price
 longTermInventory=Long-term inventory
 longTermInventoryAmount=Long-term inventory Amount
 currency=Currency
