BI-004 逆ザヤ防止分析 新增字段

--- a/bi-s4apps01/costanalysis/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/costanalysis/webapp/i18n/i18n.properties
@@ -22,6 +22,7 @@ Material=部品
 Product=製品
 Customer=得意先
 
+Results=結果
 YearMonth=会計年月
 Companycode=会社コード									
 CompanycodeText=会社コードテキスト									
@@ -37,8 +38,11 @@ CustomerName=得意先テキスト
 EstimatedPrice=見積単価									
 FinalPrice=最終受入単価									
 FinalPostingDate=最終受入日付									
-FinalSupplier=最終受入仕入先									
-FixedSupplier=固定仕入先									
+FinalSupplier=最終受入仕入先
+FinalSupplierName=最終仕入先テキスト
+FinalPurchaseOrder=最終購買伝票									
+FixedSupplier=固定仕入先
+FixedSupplierName=固定仕入先テキスト									
 StandardPrice=標準原価									
 MovingAveragePrice=実際原価							
 Currency=通貨									
