MM-011/021 購買申請登録/承認 CR#4359

--- a/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
@@ -32,8 +32,15 @@ UploadView.checkBtn = チェック
 UploadView.saveBtn = 実行
 #XBUT,16: DisplayView.CreateBtn
 DisplayView.CreateBtn = PO連携
-DisplayView.Application = 承認送信
-DisplayView.Revoke = 承認撤回
+
+# MOD BEGIN BY XINLEI XU 2025/04/22 CR#4359
+# DisplayView.Application = 承認送信
+# DisplayView.Revoke = 承認撤回
+DisplayView.Application = 承認依頼送信
+DisplayView.Revoke = 承認依頼取り下げ
+DisplayView.Delete = 削除
+# MOD END BY XINLEI XU 2025/04/22 CR#4359
+
 #XBUT,11: ChangeView.InSave
 ChangeView.InSave = 保存
 #XBUT,29: UploadView.DownloadBtn
@@ -110,3 +117,19 @@ LastModified=最終更新
 UploadFailed=添付ファイルのアップロードに失敗しました。
 DownloadFileFailed=ファイルのダウンロードに失敗しました。
 DeleteFileFailed=ファイルの削除に失敗しました。
+
+# ADD BEGIN BY XINLEI XU 2025/04/22 CR#4359
+DeliveryDate1=指定納期/納入日付
+POLinkStatus=PO連携ステータス
+ViewRange=閲覧範囲
+ViewRange1Text=申請者データ
+ViewRange2Text=全申請データ
+SupplierName=仕入先名称
+PurchasingGroupName=購買グループの名称
+CostCenterName=原価センタの名称
+GLAccountName=G/L勘定科目の名称
+NetPrice=単価
+Amount=金額
+DeletePRSuccess=選択された明細は削除されました。
+DeletePRError=選択された明細にはステータスが「登録済」以外になる明細があります。
+# ADD END BY XINLEI XU 2025/04/22 CR#4359
