--- a/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
@@ -115,7 +115,7 @@ DialogTitle=承認コメント
 bConfirm=確認
 bCancel=キャンセル
 DialogTitleReject=却下コメント
-amount1=正味額
+amount1=金額
 
 AcceptPlaceholder=コメントの追加（オプション）
 RejectPlaceholder=コメントの追加（オプション）
@@ -137,3 +137,8 @@ LastModified=最終更新
 UploadFailed=添付ファイルのアップロードに失敗しました。
 DownloadFileFailed=ファイルのダウンロードに失敗しました。
 DeleteFileFailed=ファイルの削除に失敗しました。
+
+SupplierName=仕入先名称
+CostCenterName=原価センタの名称
+GLAccountName=G/L勘定科目の名称
+NetPrice=単価
