--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_ja.properties
@@ -86,8 +86,8 @@ Success=成功
 Message1=行 {0} の保管場所(From)と(TO)が同じです。チェックしてください。
 Message2=行 {0} の移動数量は在庫数量を超えました。
 Message3=行 {0} の移動数量は欠品数量を超えることはできません。
-Message4=行 {0} の移動数量は欠品数量より少ないです。
-Message5=行 {0} の移動数量は欠品数量を超えました。
+Message4=行 {0} の移動数量は（欠品数量+先行出庫数量）より少ないです。
+Message5=行 {0} の移動数量は（欠品数量+先行出庫数量）を超えました。
 Message6=行 {0} {1}を入力してください。
 Message7=入出庫予定処理件数は1件しか処理できません。
 Message8=入出庫予定 {0} 明細 {1} は転記待データではありません。
