MM-011/021 購買申請登録/承認 CR#4359

--- a/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
@@ -125,9 +125,9 @@ ViewRange=閲覧範囲
 ViewRange1Text=申請者データ
 ViewRange2Text=全申請データ
 SupplierName=仕入先名称
-PurchasingGroupName=購買グループの名称
-CostCenterName=原価センタの名称
-GLAccountName=G/L勘定科目の名称
+PurchasingGroupName=購買グループ名称
+CostCenterName=原価センタ名称
+GLAccountName=G/L勘定科目名称
 NetPrice=単価
 Amount=金額
 DeletePRSuccess=選択された明細は削除されました。
