--- a/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
@@ -139,6 +139,6 @@ DownloadFileFailed=ファイルのダウンロードに失敗しました。
 DeleteFileFailed=ファイルの削除に失敗しました。
 
 SupplierName=仕入先名称
-CostCenterName=原価センタの名称
-GLAccountName=G/L勘定科目の名称
+CostCenterName=原価センタ名称
+GLAccountName=G/L勘定科目名称
 NetPrice=単価
