MM-011/021 購買申請登録/承認 CR#4359

--- a/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
@@ -131,5 +131,5 @@ GLAccountName=G/L勘定科目名称
 NetPrice=単価
 Amount=金額
 DeletePRSuccess=選択された明細は削除されました。
-DeletePRError=選択された明細にはステータスが「登録済」以外になる明細があります。
+DeletePRError=選択された明細のステータスは不適切なので、削除できません。チェックしてください。
 # ADD END BY XINLEI XU 2025/04/22 CR#4359
