販売計画一覧 报错消息变更

--- a/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
@@ -77,7 +77,10 @@ confirmMessage={0}しますか？
 getAuthorityFailed=権限情報の取得に失敗しました。
 noAuthorityView=ユーザ {0} は該当APPの権限がありません。
 
-allVersionsEmpty=値計画の売上&貢献利益&売上総利益が関連しますので、全部入力してください！
+# MOD BEGIN BY XINLEI XU 2025/04/24
+# allVersionsEmpty=値計画の売上&貢献利益&売上総利益が関連しますので、全部入力してください！
+allVersionsEmpty=計画のバージョンを指定してください。
+# MOD END BY XINLEI XU 2025/04/24
 zeroEmptyWithAtLeastOneEmpty=値計画の売上&貢献利益&売上総利益が関連しますので、全部入力してください！
 oneTwoThreeStartWithWrong=入力された検索条件が正しくなく、ルールに従って入力してください。
 
